<resources>
    <string name="app_name">Latihan Intent App</string>
    <string name="move_to_moveActivity">Pindah ke MoveActivity</string>
    <string name="move_activity_with_data">Pindah Activity dengan data</string>
    <string name="move_activity_with_object">Pindah Activity dengan Object</string>
    <string name="receiving_data">Menerima data ...</string>
    <string name="reveiced_object">Menerima Object</string>
    <string name="dial_phoneS">Dial a Phone Number</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="move_to_result">Pindah Activity untuk result</string>
    <string name="result_choose">Hasil Pilihan</string>
</resources>