<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_moveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/move_to_moveActivity"/>
    <Button
        android:id="@+id/btn_move_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/move_activity_with_data"/>
    <Button
        android:id="@+id/btn_move_with_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/move_activity_with_object"/>
    <Button
        android:id="@+id/btn_dialphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dial_phoneS"/>
    <Button
        android:id="@+id/btn_move_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/move_to_result"/>
    <TextView
        android:id="@+id/tv_result_for_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_choose"
        android:gravity="center"
        android:textSize="24sp"/>
</LinearLayout>